adding update to all endpoint
