# REST api/swagger/spring-server/src/main/resources/api-spec.yaml
@@ -98,7 +98,7 @@ paths:
         '200':
           description: OK
           schema:
-            type: object
+            $ref: '#/definitions/Badge'
     delete:
       description: delete a badge
       operationId: deleteBadge
@@ -171,7 +171,7 @@ paths:
         '200':
           description: OK
           schema:
-            type: object
+            $ref: '#/definitions/PointScale'
     delete:
       description: delete a pointScale
       operationId: deletePointScale
@@ -244,7 +244,7 @@ paths:
         '200':
           description: OK
           schema:
-            type: object
+            $ref: '#/definitions/Rule'
     delete:
       description: delete a rule
       operationId: deleteRule
